add keycloak and spring security to backend
refactor docker files into docker folder, add potential swarm alternatives for rolling updates and more, some documentation changes

--- a/.env.example
+++ b/.env.example
@@ -17,19 +17,28 @@ POSTGRES_HOST=postgres:5432 # use 'localhost:5555' for local development with a 
 POSTGRES_DB=your_postgres_db
 POSTGRES_SCHEMA=mysite
 POSTGRES_USER=your_postgres_user
-POSTGRES_PASSWORD_FILE=/path/to/your/postgres_password
+POSTGRES_PASSWORD=your_postgres_password # Use this for both dev and prod (direct env var)
 
+# Keycloak
+KEYCLOAK_HOSTNAME=auth.your-production-domain.com # Public hostname for Keycloak in production
+KEYCLOAK_HTTP_RULE=Host(`${KEYCLOAK_HOSTNAME}`) # Production HTTP rule
+KEYCLOAK_ISSUER_URI=https://${KEYCLOAK_HOSTNAME}/realms/mkopp # Production issuer URI
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
+
+# Backend
+CORS_ALLOWED_ORIGINS=https://mkopp.dev,https://www.mkopp.dev
+# Backend - Debug
+CONTROLLER_LOGGING_ASPECT_LEVEL=ERROR
+CONTROLLER_LOGGING_REQUEST_ARGS=false
+SERVICE_LOGGING_ASPECT_LEVEL=ERROR
+SERVICE_LOGGING_REQUEST_ARGS=false
 
 # Frontend - Debug
 LOG_REQUESTS=false #true
 DEBUG= #*
 
-# Backend - Debug
-CONTROLLER_LOGGING_ASPECT_LEVEL=ERROR
-CONTROLLER_LOGGING_REQUEST_ARGS=false #true
-SERVICE_LOGGING_ASPECT_LEVEL=ERROR
-SERVICE_LOGGING_REQUEST_ARGS=false #true
-
 # VPS project root folder
 DEPLOY_PATH=/path/to/your/project
+
 DOCKERHUB_USERNAME=your_dockerhub_username
