--- a/apps/mysite-backend/src/main/resources/application-dev.yaml
+++ b/apps/mysite-backend/src/main/resources/application-dev.yaml
@@ -32,3 +32,9 @@ logging:
     # SQL logging for N+1 detection (only in dev)
     # '[org.hibernate.SQL]': DEBUG
     '[org.hibernate.type.descriptor.sql.BasicBinder]': TRACE
+
+application:
+  cors:
+    allowed-origins:
+      - "http://localhost:3000"
+      - "http://localhost:4200"
