set CLI default collection and project FE

--- a/nx.json
+++ b/nx.json
@@ -1,5 +1,9 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
+  "cli": {
+    "defaultCollection": "@nx/angular",
+    "defaultProjectName": "mysite-frontend"
+  },
   "namedInputs": {
     "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "production": [
