feat: FE Keycloak Login/Logout

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@fortawesome/free-brands-svg-icons": "^7.0.1",
     "@fortawesome/free-regular-svg-icons": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "dayjs": "^1.11.18",
     "express": "^4.21.2",
+    "keycloak-js": "^26.2.0",
+    "ngxtension": "^6.0.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
