feat: FE toast service update: BE cors config & keycloak settings

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ POSTGRES_PASSWORD=your_postgres_password # Use this for both dev and prod (direc
 KEYCLOAK_HOSTNAME=auth.your-production-domain.com # Public hostname for Keycloak in production
 KEYCLOAK_HTTP_RULE=Host(`${KEYCLOAK_HOSTNAME}`) # Production HTTP rule
 KEYCLOAK_ISSUER_URI=https://${KEYCLOAK_HOSTNAME}/realms/mkopp # Production issuer URI
+KEYCLOAK_JWK_SET_URI=http://keycloak:8080/realms/mkopp/protocol/openid-connect/certs # Internal URI for JWK set (used by backend)
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
 
