--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "dayjs": "^1.11.18",
     "express": "^4.21.2",
+    "highlight.js": "^11.11.1",
     "keycloak-js": "^26.2.0",
+    "ngx-highlightjs": "^14.0.1",
+    "ngx-markdown": "^20.1.0",
     "ngxtension": "^6.0.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
@@ -52,6 +55,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
+    "@types/marked": "^5.0.2",
     "@types/node": "22.2.0",
     "@typescript-eslint/utils": "^8.29.0",
     "angular-eslint": "^20.0.0",
