--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,10 @@
 {
   "singleQuote": true,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "printWidth": 80,
   "plugins": ["prettier-plugin-tailwindcss"],
-  "tailwindConfig": "./apps/mysite-frontend/tailwind.config.js"
+  "tailwindConfig": "./apps/mysite-frontend/tailwind.config.js",
+  "tailwindFunctions": ["clsx", "cn"]
 }
