--- a/apps/mysite-backend/src/main/resources/application.yaml
+++ b/apps/mysite-backend/src/main/resources/application.yaml
@@ -52,7 +52,7 @@ spring:
         connection:
           '[provider_disables_autocommit]': true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none # We use Flyway for schema migrations
       naming:
         implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
@@ -61,7 +61,7 @@ spring:
     enabled: true
     baseline-on-migrate: true
     locations: classpath:db/migration
-    schemas: public,user,blog
+    schemas: public,app_user,blog
   security:
     oauth2:
       resourceserver:
