--- a/apps/mysite-backend/src/main/resources/application.yaml
+++ b/apps/mysite-backend/src/main/resources/application.yaml
@@ -43,7 +43,6 @@ spring:
         '[order_inserts]': true
         # '[order_deletes]': true
         '[default_schema]': ${POSTGRES_SCHEMA}
-        dialect: org.hibernate.dialect.PostgreSQLDialect
         jdbc:
           '[time_zone]': UTC
           '[batch_size]': 25
@@ -75,6 +74,19 @@ spring:
           jwk-set-uri: ${KEYCLOAK_JWK_SET_URI}
           # But validates JWTs have the public issuer (what browsers sees)
           issuer-uri: ${KEYCLOAK_ISSUER_URI}
+      client:
+        registration:
+          keycloak:
+            client-id: mkopp
+            authorization-grant-type: authorization_code
+            redirect-uri: '{baseUrl}/swagger-ui/oauth2-redirect.html'
+            scope: openid, profile, email
+        provider:
+          keycloak:
+            authorization-uri: http://auth.localhost/realms/mkopp/protocol/openid-connect/auth
+            token-uri: http://auth.localhost/realms/mkopp/protocol/openid-connect/token
+            user-info-uri: http://auth.localhost/realms/mkopp/protocol/openid-connect/userinfo
+            jwk-set-uri: http://auth.localhost/realms/mkopp/protocol/openid-connect/certs
   devtools:
     restart:
       enabled: false
@@ -110,6 +122,15 @@ management:
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
+    oauth:
+      client-id: mkopp
+      use-pkce-with-authorization-code-grant: true
+      scopes:
+        - openid
+        - profile
+        - email
+    tags-sorter: alpha
+    operations-sorter: alpha
   api-docs:
     path: /v3/api-docs
 application:
