--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@my-workspace/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "download:backend": "powershell -File tools\\scripts\\api_download.ps1 -Service backend -Url http://api.localhost/v3/api-docs",
+    "generate:backend": "powershell -ExecutionPolicy Bypass -File tools\\scripts\\api_generate.ps1 -Service backend",
+    "update:backend": "npm run download:backend && npm run generate:backend"
+  },
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "~20.1.0",
@@ -47,6 +51,7 @@
     "@nx/web": "21.4.1",
     "@nx/workspace": "21.4.1",
     "@nxrocks/nx-spring-boot": "^11.0.1",
+    "@openapitools/openapi-generator-cli": "^2.25.2",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~20.1.0",
     "@swc-node/register": "~1.9.1",
