--- a/apps/mysite-frontend/Dockerfile.prod
+++ b/apps/mysite-frontend/Dockerfile.prod
@@ -10,6 +10,7 @@ COPY tsconfig.base.json ./
 RUN npm ci --legacy-peer-deps
 
 COPY apps/mysite-frontend ./apps/mysite-frontend
+COPY libs ./libs
 RUN npx nx build mysite-frontend --configuration=production
 
 
