--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,14 @@ DEBUG= #*
 DEPLOY_PATH=/path/to/your/project
 
 DOCKERHUB_USERNAME=your_dockerhub_username
+
+# AI Settings
+# Gemini
+GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_BASE_URL=https://generativelanguage.googleapis.com/v1beta
+GEMINI_MODEL=gemini-2.5-flash
+# Local LLM or GPT, even Gemini via OpenAI API compatibility
+LLM_API_KEY=dummy_or_gpt_api_key_here
+LLM_API_BASE_URL=https://generativelanguage.googleapis.com/v1beta/openai
+LLM_API_COMPLETIONS_PATH=/chat/completions
+LLM_MODEL=gemini-2.5-flash-lite
