--- a/apps/mysite-backend/src/main/resources/application.yaml
+++ b/apps/mysite-backend/src/main/resources/application.yaml
@@ -11,6 +11,11 @@ server:
   port: 8200
   shutdown: graceful
 spring:
+  config:
+    import:
+      - 'classpath:application-db.yaml'
+      - 'classpath:application-security.yaml'
+      - 'classpath:application-ai.yaml'
   lifecycle:
     timeout-per-shutdown-phase: 25s
   # profiles:
@@ -22,71 +27,6 @@ spring:
   # threads:  # update java and enable if needed
   #     virtual:
   #         enabled: true
-  datasource:
-    url: jdbc:postgresql://${POSTGRES_HOST}/${POSTGRES_DB}?options=-c%20timezone%3DUTC
-    username: ${POSTGRES_USER}
-    password: ${POSTGRES_PASSWORD}
-    hikari:
-      poolName: MysiteHikari
-      auto-commit: false
-      maximum-pool-size: 20
-      minimum-idle: 10
-      connection-timeout: 30000 # 30 seconds
-      idle-timeout: 600000 # 10 minutes
-    driver-class-name: org.postgresql.Driver
-    type: com.zaxxer.hikari.HikariDataSource
-  jpa:
-    properties:
-      hibernate:
-        '[generate_statistics]': false
-        '[order_updates]': true
-        '[order_inserts]': true
-        # '[order_deletes]': true
-        '[default_schema]': ${POSTGRES_SCHEMA}
-        jdbc:
-          '[time_zone]': UTC
-          '[batch_size]': 25
-          '[default_batch_fetch_size]': 25 # For collection fetching in queries
-          '[jdbc.fetch_size]': 25 # query hint
-          # '[batch_versioned_data]': true  # for later use with versioned entities
-          # '[jdbc.batch_versioned_data]': true
-        query:
-          '[fail_on_pagination_over_collection_fetch]': true
-          '[in_clause_parameter_padding]': true
-        connection:
-          '[provider_disables_autocommit]': true
-    hibernate:
-      ddl-auto: none # We use Flyway for schema migrations
-      naming:
-        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
-        physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
-    open-in-view: false # Disable open-in-view pattern for better resource management
-  flyway:
-    enabled: true
-    baseline-on-migrate: true
-    locations: classpath:db/migration
-    schemas: public,app_user,blog
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          # Backend connects to Keycloak directly via Docker network
-          jwk-set-uri: ${KEYCLOAK_JWK_SET_URI}
-          # But validates JWTs have the public issuer (what browsers sees)
-          issuer-uri: ${KEYCLOAK_ISSUER_URI}
-      client:
-        registration:
-          keycloak:
-            client-id: mkopp
-            authorization-grant-type: authorization_code
-            redirect-uri: '{baseUrl}/swagger-ui/oauth2-redirect.html'
-            scope: openid, profile, email
-        provider:
-          keycloak:
-            authorization-uri: http://auth.localhost/realms/mkopp/protocol/openid-connect/auth
-            token-uri: http://auth.localhost/realms/mkopp/protocol/openid-connect/token
-            user-info-uri: http://auth.localhost/realms/mkopp/protocol/openid-connect/userinfo
-            jwk-set-uri: http://auth.localhost/realms/mkopp/protocol/openid-connect/certs
   devtools:
     restart:
       enabled: false
